@startuml
    namespace com.hack23.sonar.cloudformation.parser {

        class CfnNagReport [[CfnNagReport.html]] {
            +getFailure_count(): int
            +setFailure_count(int): void
        }

        class CfnNagScanReport [[CfnNagScanReport.html]] {
            +getFilename(): String
            +setFilename(String): void
        }

        class CfnNagScanReportReader [[CfnNagScanReportReader.html]] {
            +readReport(InputStream): List<CfnNagScanReport>
        }

        class CfnNagReportReader [[CfnNagReportReader.html]] {
            +readReport(InputStream): CfnNagReport
        }

        class CfnNagViolation [[CfnNagViolation.html]] {
            +getId(): String
            +setId(String): void
            +getType(): String
            +setType(String): void
            +getMessage(): String
            +setMessage(String): void
            +getLogical_resource_ids(): List<String>
            +setLogical_resource_ids(List<String>): void
            +getLine_numbers(): List<Integer>
            +setLine_numbers(List<Integer>): void
        }

        CfnNagReport --> "*" CfnNagViolation: violations
        CfnNagScanReport --> CfnNagReport: file_results
    }

    center footer UMLDoclet 2.0.3-SNAPSHOT, PlantUML 1.2019.06
@enduml
